test/fail/enums_and_variants/variant_decl.lly
#[
SyntaxError: Variant types not allowed in a declaration.
    from variant_decl.lly:11
]#

enum Test[A] {
    One(A)
    Two
}

var v: One[integer] = One(10)
